testing/framework/resources/Advanced/Failing/mondrian/query6398.e
USA	1997	Drink	9218.3534	1021	8028.1773	18010.6022	21198	23114	9982.4249
USA	1997	Non-Consumable	19692.5058	1922	17139.8069	37612.3657	37665	41347	20472.5588
USA	1997	Food	73367.5497	7482	63875.2684	141147.9197	148863	162777	77272.6513
